@@ -4,5 +4,7 @@
 		<property name="id" type="integer" unsigned="1" notnull="1" autoincrement="true" />
 		<property name="use_translation" type="integer" length="1" unsigned="1" default="0" />
 		<property name="application" type="text" length="255" unsigned="1" notnull="0" />
+		<property name="component" type="text" length="255" unsigned="1" notnull="0" />
+		<property name="extra_parameters" type="text" length="255" unsigned="1" notnull="0" />
 	</properties>
 </object>
